started on Acorn Draw file text area with columns